<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tele_golf</name>
  <version>0.0.0</version>
  <description>Runs Autonomous Golf Ball Search and Rescue Robot</description>
  <maintainer email="Salimjbara@gmail.com">slim</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>smbus</depend>
  <depend>time</depend>
  <depend>datetime</depend>
  <depend>sensor_msgs</depend>
  <depend>transforms3d</depend>
  <depend>geometry_msgs</depend>
  <depend>pynmea2</depend>
  <depend>RPi</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>pyIMUpub</exec_depend>
  <exec_depend>pyMAGpub</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
